Crash trying to move the origin of an empty #73399

Closed
opened 2020-01-25 23:43:05 +01:00 by Georg K · 6 comments

System Information
Operating system: Linux-5.4.13-3-MANJARO-x86_64-with-glibc2.29 64 Bits
Graphics card: AMD VERDE (DRM 2.50.0, 5.4.13-3-MANJARO, LLVM 9.0.1) X.Org 4.5 (Core Profile) Mesa 19.3.2

Blender Version
Broken: version: 2.83 (sub 1), branch: master, commit date: 2020-01-24 17:48, hash: 79d9874028
Worked: 2.81a

Short description of error
Trying to move the origin of an empty crashes blender.

Exact steps for others to reproduce the error
Create an empty
Check "Affect only: Origins"
Selection to Cursor (Shift-S 8)
Crash

**System Information** Operating system: Linux-5.4.13-3-MANJARO-x86_64-with-glibc2.29 64 Bits Graphics card: AMD VERDE (DRM 2.50.0, 5.4.13-3-MANJARO, LLVM 9.0.1) X.Org 4.5 (Core Profile) Mesa 19.3.2 **Blender Version** Broken: version: 2.83 (sub 1), branch: master, commit date: 2020-01-24 17:48, hash: `79d9874028` Worked: 2.81a **Short description of error** Trying to move the origin of an empty crashes blender. **Exact steps for others to reproduce the error** Create an empty Check "Affect only: Origins" Selection to Cursor (Shift-S 8) Crash
Author

Added subscriber: @georgK

Added subscriber: @georgK

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can reproduce this issue. The following stack trace is for 5325bc3fb6.

ED_object_data_xform_create_ex(ID * id, bool is_edit_mode) Line 309	C
ED_object_data_xform_create(ID * id) Line 405	C
ED_object_data_xform_container_item_ensure(XFormObjectData_Container * xds, Object * ob) Line 610	C
snap_selected_to_location(bContext * C, const float * snap_target_global, const bool use_offset) Line 460	C
snap_selected_to_cursor_exec(bContext * C, wmOperator * op) Line 536	C
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1269	C
wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Line 1470	C
WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Line 1519	C
ui_apply_but_funcs_after(bContext * C) Line 880	C
ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) Line 10750	C
wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 617	C
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2543	C
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2789	C
wm_event_do_handlers(bContext * C) Line 3168	C
WM_main(bContext * C) Line 420	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 520	C
I can reproduce this issue. The following stack trace is for 5325bc3fb6. ``` ED_object_data_xform_create_ex(ID * id, bool is_edit_mode) Line 309 C ED_object_data_xform_create(ID * id) Line 405 C ED_object_data_xform_container_item_ensure(XFormObjectData_Container * xds, Object * ob) Line 610 C snap_selected_to_location(bContext * C, const float * snap_target_global, const bool use_offset) Line 460 C snap_selected_to_cursor_exec(bContext * C, wmOperator * op) Line 536 C wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1269 C wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Line 1470 C WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Line 1519 C ui_apply_but_funcs_after(bContext * C) Line 880 C ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) Line 10750 C wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 617 C wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2543 C wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2789 C wm_event_do_handlers(bContext * C) Line 3168 C WM_main(bContext * C) Line 420 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 520 C ```
Bastien Montagne self-assigned this 2020-01-27 11:43:26 +01:00

This issue was referenced by 34c8ba6d3e

This issue was referenced by 34c8ba6d3e79e85231b0e63d25e7c43cf5ab4ea9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.82 milestone 2023-02-08 16:41:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73399
No description provided.