Fix T73399: Crash trying to move the origin of an empty.

Empty objects have no obdata, so we need to check for NULL id...